--- a/readme
+++ b/readme
@@ -1,16 +1,15 @@
+# AWS
+Cloud Computing Assignment
+
 # Install flask on EC2 
 # Either add "sudo" before all commands or use "sudo su" first
 
 #!/bin/bash
 yum update -y
-yum install git -y
-git clone https://github.com/lowchoonkeat/aws-live.git
-cd aws-live
-pip3 install flask
-pip3 install pymysql
-pip3 install boto3
-python3 EmpApp.py
-
-
-
-
+sudo yum install git
+git clone https://github.com/Keyunfung/AWS.git
+cd AWS
+sudo pip3 install flask
+sudo pip3 install pymysql
+sudo pip3 install boto3
+sudo python3 EmpApp.py
